--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <img src="./images/Hamburger.png" alt="Меню" class="header_menu" />
+    </header>
+    <main class="container">
+      <div></div>
+      <div class="header_name">
+        <div class="circle"></div>
+        Меня зовут Александра Смит
+      </div>
+    </main>
+    <script src="./script.js"></script>
+  </body>
 </html>
