--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div></div>
       <div class="header_name">
         <div class="circle"></div>
-        Меня зовут Александра Смит!!!!
+        Меня зовут Ксюша
       </div>
     </main>
     <script src="./script.js"></script>
