--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <div></div>
       <div class="header_name">
         <div class="circle"></div>
-        Меня зовут Ксюша!!!!!!!!!!! Меня зовут Ксюша!!!!!!!!!!! Меня зовут
-        Ксюша!!!!!!!!!!! Меня зовут Ксюша!!!!!!!!!!!
+        Леша
       </div>
     </main>
     <script src="./script.js"></script>
