--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div></div>
       <div class="header_name">
         <div class="circle"></div>
-       Леша!!!!!
+       Леша!!!!!545454
       </div>
       <div class="circle"></div>
       Ксюша!
