--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div></div>
       <div class="header_name">
         <div class="circle"></div>
-       Леша!!!!!545454
+       Леша!!!!!54545412
       </div>
       <div class="circle"></div>
       Ксюша!
